Fix right arrow in header on Safari

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -37,6 +37,11 @@
 
 	.icon-right-open {
 		font-size: 20px;
+
+		&:before {
+			vertical-align: top;
+			margin-top: 15px;
+		}
 	}
 }
 
